# bakerd

./: .gitignore  Cargo.toml  LICENCE  Makefile  README.md  build.rs  codecov.yaml  config.yaml  rustfmt.toml
.github/workflows/: build-and-test.yml  rust.yml
bakerd/DEBIAN/: conffiles  control  postinst
bakerd/usr/lib/systemd/system/: bakerd.service
bakerd/var/lib/bakerd/config/: config.yaml
migrations/2022-06-12-164221_create_prices/: up.sql
migrations/2022-06-14-085107_block_and_account/: down.sql  up.sql
migrations/2022-08-19-121253_status/: down.sql  up.sql
migrations/2022-08-25-050354_user_and_session/: down.sql  up.sql
migrations/2022-08-31-054005_account_pending_update/: down.sql  up.sql
migrations/2022-09-10-144701_price_more/: down.sql  up.sql
proto/: concordium.proto
src/: authentication.rs  config.rs  controller.rs  main.rs  middleware.rs  model.rs  repository.rs  schema.rs
src/client/: bitfinex.rs  mod.rs  node.rs
src/controller/: auth.rs  mod.rs
src/job/: account.rs  block.rs  mod.rs  price.rs  status.rs
src/repository/: account.rs  block.rs  mod.rs  price.rs  status.rs  user.rs
