[package]
name = "staking"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
axum = "0.5"
tokio = { version = "1.2", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"
r2d2 = "0.8"
cron = "0.10"
chrono = "0.4"

[dev-dependencies]
mockall = "0.11"
