[package]
name = "bakerd"
version = "0.3.2"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9"
axum = { version = "0.5", features = ["headers"] }
tokio = { version = "1.2", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
serde_with = "1.14"
diesel = { version = "2.0.0-rc.1", features = ["sqlite", "r2d2"], git = "https://github.com/diesel-rs/diesel" }
diesel_migrations = { version = "2.0.0-rc.1", git = "https://github.com/diesel-rs/diesel" }
r2d2 = "0.8"
cron = "0.10"
chrono = "0.4"
tonic = "0.7"
prost = "0.10"
rust_decimal = "1.26"
rust_decimal_macros = "1.26"
reqwest = { version = "0.11", features = ["json"] }
systemstat = "0.1"
clap = { version = "3.2", features = ["derive"] }
jsonwebtoken = "8.1"
bcrypt = "0.13"
uuid = { version = "1.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.7"

[dev-dependencies]
mockall = "0.11"
tokio-stream = { version = "0.1", features = ["net"] }
tower = { version = "0.4", features = ["util"] }